Issue #102: add support for sarif reports